arreglo de ambientes texto

--- a/public/index.html
+++ b/public/index.html
@@ -492,7 +492,7 @@
             alt=""
           />
           <div
-            class="mx-auto w-56 my-6 md:absolute md:bottom-0 md:right-0 md:bg-black/90 md:h-56 md:w-[300px] md:p-6"
+            class="mx-auto w-56 my-6 md:absolute md:bottom-0 md:right-0 md:bg-black/90 md:h-56 md:w-[300px] md:p-6 md:m-0"
           >
             <div class="text-center text-lg md:text-white">
               Salón de <b>conferencias</b> en formato consejo para hasta 40
@@ -516,14 +516,14 @@
           </button>
         </a>
         </div>
-        <div>
+        <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg"
             src="../assets/_A746216.jpg"
             alt=""
           />
           <div
-            class="mx-auto w-56 my-6 md:absolute md:bottom-0 md:right-0 md:bg-black/90 md:h-56 md:w-[300px] md:p-6"
+            class="mx-auto w-56 my-6 md:absolute md:bottom-0 md:right-0 md:bg-black/90 md:h-56 md:w-[300px] md:p-6 md:m-0"
           >
             <div class="text-center md:text-white">
               Salão de em módulo <b>conferências</b> conselho para até 40
@@ -531,14 +531,14 @@
             </div>
           </div>
         </div>
-        <div>
+        <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg"
             src="../assets/_A746232.jpg"
             alt=""
           />
           <div
-            class="mx-auto w-56 my-6 md:absolute md:bottom-0 md:right-0 md:bg-black/90 md:h-56 md:w-[300px] md:p-6"
+            class="mx-auto w-56 my-6 md:absolute md:bottom-0 md:right-0 md:bg-black/90 md:h-56 md:w-[300px] md:p-6 md:m-0"
           >
             <div class="text-center text-lg md:text-white">
               Salón de <b>conferencias</b> en formato consejo para hasta 40
