cambios en la alineacion

--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
     <div id="controls-carousel" class="relative" data-carousel="slide">
       <!-- Carousel wrapper -->
       <div
-        class="relative h-96 overflow-hidden rounded-lg md:h-[630px] lg:h-[700px]"
+        class="relative h-96 overflow-hidden rounded-lg md:h-[630px] lg:h-[720px]"
       >
         <!-- Item 1 -->
         <div class="hidden duration-700 ease-in-out" data-carousel-item>
@@ -227,7 +227,7 @@
     </div>
 
     <div
-      class="casa-lide_intro flex flex-col items-center justify-center h-28 mx-auto lg:w-[1200px] md:flex-row md:justify-center md:items-center sm:h-36"
+      class="casa-lide_intro flex flex-col items-center justify-center h-28 mx-auto lg:w-[1200px] lg:mt-6 md:flex-row md:justify-center md:items-center sm:h-36"
     >
       <div
         class="casa-lide_intro_heading text-4xl font-bold text-center md:text-7xl lg:mr-12"
