cambio ruta de imagenes

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
       >
         <a href="index.html" class="flex items-center">
-          <img src="../assets/Logo Blanco.png" class="h-8 mx-2" alt="" />
+          <img src="/assets/Logo Blanco.png" class="h-8 mx-2" alt="" />
         </a>
         <a href="#contacto">
         <div class="flex md:order-2">
@@ -146,7 +146,7 @@
         <!-- Item 1 -->
         <div class="hidden duration-700 ease-in-out" data-carousel-item>
           <img
-            src="../assets/_A746207.jpg"
+            src="/assets/_A746207.jpg"
             class="absolute block -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
             alt="..."
           />
@@ -157,7 +157,7 @@
           data-carousel-item="active"
         >
           <img
-            src="../assets/_A746219.jpg"
+            src="/assets/_A746219.jpg"
             class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
             alt="..."
           />
@@ -165,7 +165,7 @@
         <!-- Item 3 -->
         <div class="hidden duration-700 ease-in-out" data-carousel-item>
           <img
-            src="../assets/_A746232.jpg"
+            src="/assets/_A746232.jpg"
             class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
             alt="..."
           />
@@ -488,7 +488,7 @@
         <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg object-cover"
-            src="../assets/_A746207.jpg"
+            src="/assets/_A746207.jpg"
             alt=""
           />
           <div
@@ -503,7 +503,7 @@
         <div>
           <img
             class="h-auto max-w-full rounded-lg object-cover"
-            src="../assets/_A746209.jpg"
+            src="/assets/_A746209.jpg"
             alt=""
           />
         </div>
@@ -519,7 +519,7 @@
         <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg"
-            src="../assets/_A746216.jpg"
+            src="/assets/_A746216.jpg"
             alt=""
           />
           <div
@@ -534,7 +534,7 @@
         <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg"
-            src="../assets/_A746232.jpg"
+            src="/assets/_A746232.jpg"
             alt=""
           />
           <div
@@ -641,7 +641,7 @@
         class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col"
       >
       <a href="index.html" class="flex items-center">
-        <img src="../assets/Logo Blanco.png" class="h-8 mx-2" alt="" />
+        <img src="/assets/Logo Blanco.png" class="h-8 mx-2" alt="" />
       </a>
         <p
           class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"
