cambio rutas img

--- a/public/index.html
+++ b/public/index.html
@@ -147,7 +147,7 @@
         <!-- Item 1 -->
         <div class="hidden duration-700 ease-in-out" data-carousel-item>
           <img
-            src="/assets/_A746207.jpg"
+            src="/public/assets/_A746207.jpg"
             class="absolute block -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
             alt="..."
           />
@@ -158,7 +158,7 @@
           data-carousel-item="active"
         >
           <img
-            src="/assets/_A746219.jpg"
+            src="/public/assets/_A746219.jpg"
             class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
             alt="..."
           />
@@ -166,7 +166,7 @@
         <!-- Item 3 -->
         <div class="hidden duration-700 ease-in-out" data-carousel-item>
           <img
-            src="/assets/_A746232.jpg"
+            src="/public/assets/_A746232.jpg"
             class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
             alt="..."
           />
@@ -489,7 +489,7 @@
         <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg object-cover"
-            src="/assets/_A746207.jpg"
+            src="/public/assets/_A746207.jpg"
             alt=""
           />
           <div
@@ -503,7 +503,7 @@
         <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg object-cover"
-            src="/assets/_A746209.jpg"
+            src="/public/assets/_A746209.jpg"
             alt=""
           />
           <div
@@ -540,7 +540,7 @@
         <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/assets/_A746232.jpg"
+            src="/public/assets/_A746232.jpg"
             alt=""
           />
           <div
