--- a/public/index.html
+++ b/public/index.html
@@ -540,7 +540,7 @@
         <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/public/assets/_A746232.jpg"
+            src="../public/assets/_A746232.jpg"
             alt=""
           />
           <div
