--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       >
         <a href="index.html" class="flex items-center">
           
-          <img src="/public/assets/lide_lounge_logo.svg" class="h-12" alt="" />
+          <img src="/public/assets/lideloungelogo.svg" class="h-12" alt="" />
         </a>
         <a href="#contacto">
         <div class="flex md:order-2">
@@ -147,7 +147,7 @@
         <!-- Item 1 -->
         <div class="hidden duration-700 ease-in-out" data-carousel-item>
           <img
-            src="/public/assets/_A746207.jpg"
+            src="/public/assets/A746207.jpg"
             class="absolute block -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
             alt="..."
           />
@@ -158,7 +158,7 @@
           data-carousel-item="active"
         >
           <img
-            src="/public/assets/_A746219.jpg"
+            src="/public/assets/A746219.jpg"
             class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
             alt="..."
           />
@@ -166,7 +166,7 @@
         <!-- Item 3 -->
         <div class="hidden duration-700 ease-in-out" data-carousel-item>
           <img
-            src="/public/assets/_A746232.jpg"
+            src="/public/assets/A746232.jpg"
             class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
             alt="..."
           />
@@ -489,7 +489,7 @@
         <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg object-cover"
-            src="/public/assets/_A746207.jpg"
+            src="/public/assets/A746207.jpg"
             alt=""
           />
           <div
@@ -503,7 +503,7 @@
         <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg object-cover"
-            src="/public/assets/_A746209.jpg"
+            src="/public/assets/A746209.jpg"
             alt=""
           />
           <div
@@ -526,7 +526,7 @@
         <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/public/assets/_A746216.jpg"
+            src="/public/assets/A746216.jpg"
             alt=""
           />
           <div
@@ -540,7 +540,7 @@
         <div class="relative">
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/public/assets/_A746232.jpg"
+            src="/public/assets/A746232.jpg"
             alt=""
           />
           <div
@@ -650,7 +650,7 @@
         class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col"
       >
       <a href="index.html" class="flex items-center">
-        <img src="/public/assets/LogoBlanco.png" class="h-8 mx-2" alt="" />
+        <img src="/public/assets/lideloungelogo.svg" class="h-8 mx-2" alt="" />
       </a>
         <p
           class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"
