--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <div
         class="casa-lide_intro_heading text-4xl font-bold text-center md:text-7xl lg:mr-12"
       >
-        <h1>LIDE LOUNGE</h1>
+        <h1>LIDE Lounge</h1>
       </div>
       <div class="casa-lide__intro_text flex flex-col justify-center text-center object-center m-4">
         <p>El centro de <b>negocios</b> más moderno de Buenos Aires.</p>
@@ -192,7 +192,7 @@
               type="button"
               class="text-white w-full bg-gray-800 hover:bg-gray-900 font-medium text-sm px-5 my-2 py-2.5 md:mr-2 mb-2"
             >
-              Mas Informacion
+              Mas e Informacion
             </button>
         </a>
       </div>
@@ -628,7 +628,7 @@
         <p
           class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"
         >
-          © 2023 Lide Lounge
+          © 2024 Lide Lounge
         
         </p>
         <span
